--- a/task-3/ILN3.ipynb
+++ b/task-3/ILN3.ipynb
@@ -22,7 +22,8 @@
     },
     "colab": {
       "name": "ILN3.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     }
   },
   "cells": [
@@ -98,7 +99,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JqvYDrW-4_Qi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JqvYDrW-4_Qi",
+        "outputId": "760fd138-4ddd-4f1c-e449-69d0b0b60ad2"
       },
       "source": [
         "import nltk\n",
@@ -108,8 +113,21 @@
         "from nltk.corpus import wordnet\n",
         "from nltk.corpus import wordnet as wn"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/wordnet.zip.\n",
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -118,7 +136,7 @@
       },
       "source": [
         "def computeOverlap(ctx, glosa):\n",
-        "  return glosa.count(ctx)\n",
+        "  return len(set(ctx) & set(glosa))\n",
         "\n",
         "def wsd(s):\n",
         "  context=nltk.word_tokenize(s)\n",
@@ -127,14 +145,16 @@
         "  contentwords = [w for w in context if w.lower() not in stopwords]\n",
         "  for ctx in contentwords:\n",
         "    sensesDict = {}\n",
-        "    example = ''\n",
         "    for sense in wn.synsets(ctx):\n",
-        "      glosa = sense.definition() + ' ' + ' '.join(sense.examples())\n",
-        "      sensesDict[sense] = computeOverlap(ctx, glosa)\n",
+        "      glosa = []\n",
+        "      for ex in sense.examples():\n",
+        "        glosa += nltk.word_tokenize(ex)\n",
+        "      glosa += nltk.word_tokenize(sense.definition())\n",
+        "      sensesDict[sense] = computeOverlap(context, glosa)\n",
         "    res = list({k: v for k, v in sorted(sensesDict.items(), key=lambda item: item[1], reverse=True)}.items())[0]\n",
-        "    print(\"\\n...Analizando \"+ctx+\" (\"+ str(len(list(wn.synsets(ctx)))) +\"sentidos) -> \" + str(res[0]) +\" con solape \" + str(res[1]))"
+        "    print(\"\\n...Analizando \"+ ctx +\" (\"+ str(len(list(wn.synsets(ctx)))) + \"sentidos) -> \" + str(res[0]) + \" con solape \" + str(res[1]))"
       ],
-      "execution_count": 57,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -144,12 +164,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZL2EMfok5An6",
-        "outputId": "e4bdf918-8d21-49b7-ebb8-9f6b513d8def"
+        "outputId": "e916b18e-7a33-43af-abcb-0b06a95474c1"
       },
       "source": [
-        "wsd('We can be heroes just for one day')"
+        "wsd('We can be heroes just for one day')\n",
+        "print('\\n')\n",
+        "wsd('I saw a man who is 98 years old and can still walk and tell jokes')\n",
+        "print('\\n')\n",
+        "wsd('We went to the bank to get money')\n",
+        "print('\\n')\n",
+        "wsd('We are sitting on the bank of the river')"
       ],
-      "execution_count": 58,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,9 +185,53 @@
             "\n",
             "...Analizando heroes (7sentidos) -> Synset('hero.n.01') con solape 1\n",
             "\n",
-            "...Analizando one (9sentidos) -> Synset('one.n.01') con solape 2\n",
+            "...Analizando one (9sentidos) -> Synset('one.s.05') con solape 2\n",
             "\n",
-            "...Analizando day (10sentidos) -> Synset('day.n.02') con solape 4\n"
+            "...Analizando day (10sentidos) -> Synset('sidereal_day.n.01') con solape 3\n",
+            "\n",
+            "\n",
+            "\n",
+            "...Analizando la frase ['I', 'saw', 'a', 'man', 'who', 'is', '98', 'years', 'old', 'and', 'can', 'still', 'walk', 'and', 'tell', 'jokes']\n",
+            "\n",
+            "...Analizando saw (28sentidos) -> Synset('see.v.01') con solape 3\n",
+            "\n",
+            "...Analizando man (13sentidos) -> Synset('man.n.01') con solape 4\n",
+            "\n",
+            "...Analizando 98 (1sentidos) -> Synset('ninety-eight.s.01') con solape 0\n",
+            "\n",
+            "...Analizando years (7sentidos) -> Synset('old_age.n.01') con solape 4\n",
+            "\n",
+            "...Analizando old (9sentidos) -> Synset('old.a.01') con solape 3\n",
+            "\n",
+            "...Analizando still (18sentidos) -> Synset('however.r.01') con solape 4\n",
+            "\n",
+            "...Analizando walk (17sentidos) -> Synset('walk.v.01') con solape 3\n",
+            "\n",
+            "...Analizando tell (9sentidos) -> Synset('assure.v.02') con solape 6\n",
+            "\n",
+            "...Analizando jokes (6sentidos) -> Synset('joke.v.01') con solape 3\n",
+            "\n",
+            "\n",
+            "\n",
+            "...Analizando la frase ['We', 'went', 'to', 'the', 'bank', 'to', 'get', 'money']\n",
+            "\n",
+            "...Analizando went (30sentidos) -> Synset('travel.v.01') con solape 4\n",
+            "\n",
+            "...Analizando bank (18sentidos) -> Synset('depository_financial_institution.n.01') con solape 3\n",
+            "\n",
+            "...Analizando get (37sentidos) -> Synset('get_down.v.07') con solape 4\n",
+            "\n",
+            "...Analizando money (3sentidos) -> Synset('money.n.01') con solape 3\n",
+            "\n",
+            "\n",
+            "\n",
+            "...Analizando la frase ['We', 'are', 'sitting', 'on', 'the', 'bank', 'of', 'the', 'river']\n",
+            "\n",
+            "...Analizando sitting (16sentidos) -> Synset('sitting.n.01') con solape 3\n",
+            "\n",
+            "...Analizando bank (18sentidos) -> Synset('bank.n.01') con solape 5\n",
+            "\n",
+            "...Analizando river (1sentidos) -> Synset('river.n.01') con solape 3\n"
           ],
           "name": "stdout"
         }
