--- a/task-3/ILN3.ipynb
+++ b/task-3/ILN3.ipynb
@@ -152,9 +152,10 @@
         "      glosa += nltk.word_tokenize(sense.definition())\n",
         "      sensesDict[sense] = computeOverlap(context, glosa)\n",
         "    res = list({k: v for k, v in sorted(sensesDict.items(), key=lambda item: item[1], reverse=True)}.items())[0]\n",
-        "    print(\"\\n...Analizando \"+ ctx +\" (\"+ str(len(list(wn.synsets(ctx)))) + \"sentidos) -> \" + str(res[0]) + \" con solape \" + str(res[1]))"
+        "    print(\"\\n...Analizando \"+ ctx +\" (\"+ str(len(list(wn.synsets(ctx)))) + \"sentidos) -> \" + str(res[0]) +\" con solape \" + str(res[1]))\n",
+        "    print(res[0].definition())"
       ],
-      "execution_count": 37,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -164,7 +165,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZL2EMfok5An6",
-        "outputId": "e916b18e-7a33-43af-abcb-0b06a95474c1"
+        "outputId": "09becbdf-f184-450e-a4de-28fb8bd565ec"
       },
       "source": [
         "wsd('We can be heroes just for one day')\n",
@@ -175,7 +176,7 @@
         "print('\\n')\n",
         "wsd('We are sitting on the bank of the river')"
       ],
-      "execution_count": 40,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,54 +185,73 @@
             "...Analizando la frase ['We', 'can', 'be', 'heroes', 'just', 'for', 'one', 'day']\n",
             "\n",
             "...Analizando heroes (7sentidos) -> Synset('hero.n.01') con solape 1\n",
+            "a man distinguished by exceptional courage and nobility and strength\n",
             "\n",
             "...Analizando one (9sentidos) -> Synset('one.s.05') con solape 2\n",
+            "indefinite in time or position\n",
             "\n",
             "...Analizando day (10sentidos) -> Synset('sidereal_day.n.01') con solape 3\n",
+            "the time for one complete rotation of the earth relative to a particular star, about 4 minutes shorter than a mean solar day\n",
             "\n",
             "\n",
             "\n",
             "...Analizando la frase ['I', 'saw', 'a', 'man', 'who', 'is', '98', 'years', 'old', 'and', 'can', 'still', 'walk', 'and', 'tell', 'jokes']\n",
             "\n",
             "...Analizando saw (28sentidos) -> Synset('see.v.01') con solape 3\n",
+            "perceive by sight or have the power to perceive by sight\n",
             "\n",
             "...Analizando man (13sentidos) -> Synset('man.n.01') con solape 4\n",
+            "an adult person who is male (as opposed to a woman)\n",
             "\n",
             "...Analizando 98 (1sentidos) -> Synset('ninety-eight.s.01') con solape 0\n",
+            "being eight more than ninety\n",
             "\n",
             "...Analizando years (7sentidos) -> Synset('old_age.n.01') con solape 4\n",
+            "a late time of life\n",
             "\n",
             "...Analizando old (9sentidos) -> Synset('old.a.01') con solape 3\n",
+            "(used especially of persons) having lived for a relatively long time or attained a specific age\n",
             "\n",
             "...Analizando still (18sentidos) -> Synset('however.r.01') con solape 4\n",
+            "despite anything to the contrary (usually following a concession)\n",
             "\n",
             "...Analizando walk (17sentidos) -> Synset('walk.v.01') con solape 3\n",
+            "use one's feet to advance; advance by steps\n",
             "\n",
             "...Analizando tell (9sentidos) -> Synset('assure.v.02') con solape 6\n",
+            "inform positively and with certainty and confidence\n",
             "\n",
             "...Analizando jokes (6sentidos) -> Synset('joke.v.01') con solape 3\n",
+            "tell a joke; speak humorously\n",
             "\n",
             "\n",
             "\n",
             "...Analizando la frase ['We', 'went', 'to', 'the', 'bank', 'to', 'get', 'money']\n",
             "\n",
             "...Analizando went (30sentidos) -> Synset('travel.v.01') con solape 4\n",
+            "change location; move, travel, or proceed, also metaphorically\n",
             "\n",
             "...Analizando bank (18sentidos) -> Synset('depository_financial_institution.n.01') con solape 3\n",
+            "a financial institution that accepts deposits and channels the money into lending activities\n",
             "\n",
             "...Analizando get (37sentidos) -> Synset('get_down.v.07') con solape 4\n",
+            "take the first step or steps in carrying out an action\n",
             "\n",
             "...Analizando money (3sentidos) -> Synset('money.n.01') con solape 3\n",
+            "the most common medium of exchange; functions as legal tender\n",
             "\n",
             "\n",
             "\n",
             "...Analizando la frase ['We', 'are', 'sitting', 'on', 'the', 'bank', 'of', 'the', 'river']\n",
             "\n",
             "...Analizando sitting (16sentidos) -> Synset('sitting.n.01') con solape 3\n",
+            "(photography) the act of assuming a certain position (as for a photograph or portrait)\n",
             "\n",
             "...Analizando bank (18sentidos) -> Synset('bank.n.01') con solape 5\n",
+            "sloping land (especially the slope beside a body of water)\n",
             "\n",
-            "...Analizando river (1sentidos) -> Synset('river.n.01') con solape 3\n"
+            "...Analizando river (1sentidos) -> Synset('river.n.01') con solape 3\n",
+            "a large natural stream of water (larger than a creek)\n"
           ],
           "name": "stdout"
         }
